--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.datasource.url=jdbc:mysql://root:EBTxQLbnJyUcjYxJzOwqDnYOtsMgFDat@turntable.proxy.rlwy.net:22727/railway
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=EBTxQLbnJyUcjYxJzOwqDnYOtsMgFDat
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+#server.port=8082
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+
+
+
 
 
 
@@ -13,8 +17,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.main.allow-circular-references=true
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=muhirehillary720@gmail.com
-spring.mail.password=qykh zixx fgqj glhy
+spring.mail.username=muhiziaimepatrick@gmail.com
+spring.mail.password=cbhm kfhx tubh rkkt
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
