--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,17 @@
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=update
+server.port=8082
+
+spring.datasource.url=jdbc:mysql://root:IybwenJfAgnjEDFcwgnzvEpneujQqaHX@turntable.proxy.rlwy.net:38217/railway
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+#spring.datasource.password=IybwenJfAgnjEDFcwgnzvEpneujQqaHX
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+
 
 
 
