aded read me file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8082
+server.port=8085
 #spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
 #spring.datasource.username=root
 #spring.datasource.password=1234
@@ -10,7 +10,7 @@
 spring.datasource.url=jdbc:mysql://root:IybwenJfAgnjEDFcwgnzvEpneujQqaHX@turntable.proxy.rlwy.net:38217/railway
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-#spring.datasource.password=IybwenJfAgnjEDFcwgnzvEpneujQqaHX
+spring.datasource.password=IybwenJfAgnjEDFcwgnzvEpneujQqaHX
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
